fixed burger menu issue on safari

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -270,8 +270,8 @@ span {
 .nav-toggle {
   padding: 0;
   margin: 4px 0 4px 0;
-  height: 30px;
-  width: 30px;
+  height: 34px;
+  width: 34px;
   background-color: transparent;
   float: right;
   @include md {
